@@ -1,4 +1,4 @@
-AC_INIT([libenet], [1.3.4])
+AC_INIT([libenet], [1.3.5])
 AC_CONFIG_SRCDIR([include/enet/enet.h])
 AM_INIT_AUTOMAKE([foreign])
 AM_MAINTAINER_MODE([enable])
